# brightctl

./: Cargo.toml  README.md
hyperfine-results/: compare.md  restore.md  save.md
src/: main.rs
